fixed with of 3D canvas

--- a/top_images.html
+++ b/top_images.html
@@ -180,8 +180,8 @@
       async function set_subject(subject) {
         console.log("set_subject", subject);
         if (last_subject == subject) return;
-        if(brain_3d) {
-            brain_3d.set_inactive()
+        if (brain_3d) {
+          brain_3d.set_inactive();
         }
         last_subject = subject;
         if (!brains[subject]) {
@@ -215,31 +215,31 @@
       let top_images_data = null;
       let selection_changed_event = null;
 
-
       async function set_file_paths(mode, subject) {
         if (mode == "Vertex Averaged Concepts") {
-          if(subject !== "fsaverage") {
+          if (subject !== "fsaverage") {
             surface_image_file = `static_data/vertex_concept_averages/tsne__${subject}.png`;
             top_images_file = `static_data/vertex_concept_averages/M_fssubject_binary_top_images__${subject}.npy`;
-          }
-          else {
+          } else {
             surface_image_file = "static_data/tsne__fsaverage.png";
-            top_images_file = "static_data/vertex_concept_averages/M_fsavg_top_images.npy";
+            top_images_file =
+              "static_data/vertex_concept_averages/M_fsavg_top_images.npy";
           }
-        }
-        else if (mode == "Betas") {
+        } else if (mode == "Betas") {
           surface_image_file = "static_data/betas_average.png";
-          top_images_file = "static_data/vertex_concept_averages/betas__top_images__fsavg.npy";
+          top_images_file =
+            "static_data/vertex_concept_averages/betas__top_images__fsavg.npy";
+        } else if (mode == "Linear Encoder") {
+          surface_image_file =
+            "static_data/linear_encoding__tsne__fsaverage.png";
+          top_images_file =
+            "static_data/vertex_concept_averages/linear_encoding__fsavg__top_images.npy";
+        } else if (mode == "Linear Decoder") {
+          surface_image_file =
+            "static_data/linear_decoding__tsne__fsaverage.png";
+          top_images_file =
+            "static_data/vertex_concept_averages/linear_decoding__fsavg__top_images.npy";
         }
-        else if (mode == "Linear Encoder") {
-          surface_image_file = "static_data/linear_encoding__tsne__fsaverage.png"
-          top_images_file = 'static_data/vertex_concept_averages/linear_encoding__fsavg__top_images.npy';
-        }
-        else if (mode == "Linear Decoder") {
-          surface_image_file = "static_data/linear_decoding__tsne__fsaverage.png"
-          top_images_file = 'static_data/vertex_concept_averages/linear_decoding__fsavg__top_images.npy';
-        }
-
       }
       set_file_paths("Vertex Averaged Concepts", last_subject);
 
@@ -252,24 +252,18 @@
         set_file_paths(mode, subject);
         //brain_3d.set_texture(await getPngData(surface_image_file));
 
-        top_images_data = await cachedLoadNpy(top_images_file,);
+        top_images_data = await cachedLoadNpy(top_images_file);
         await image_map();
         if (selection_changed_event !== null)
           await update_images(selection_changed_event);
+        scene.onWindowResize();
       }
       update_plot();
 
       document.update_plot = update_plot;
       window.update_plot = update_plot;
 
-function add_check_box(
-          placeholder,
-          name,
-          index,
-          index2,
-          invert,
-          radio,
-        ) {
+      function add_check_box(placeholder, name, index, index2, invert, radio) {
         let label = document.createElement("label");
         let text = document.createElement("span");
         text.innerText = index2 || index;
@@ -296,7 +290,12 @@ function add_check_box(
         let checkbox = add_check_box(
           placeholder3,
           "mode",
-          ["Vertex Averaged Concepts", "Betas", "Linear Encoder", "Linear Decoder"][i],
+          [
+            "Vertex Averaged Concepts",
+            "Betas",
+            "Linear Encoder",
+            "Linear Decoder",
+          ][i],
           undefined,
           true,
           true,
@@ -344,7 +343,8 @@ function add_check_box(
       }
 
       async function image_map() {
-        if (!top_images_data) return console.error("top_images_data not loaded");
+        if (!top_images_data)
+          return console.error("top_images_data not loaded");
         let elem = document.getElementById("selected_images");
         elem.innerHTML = "";
         for (let image_id of url_obj.selected_images) {
@@ -353,9 +353,7 @@ function add_check_box(
           im.className = "image-container image-container-minus";
         }
         if (url_obj.selected_images.length == 0) {
-          brain_3d.set_texture(
-            await getPngData(surface_image_file),
-          );
+          brain_3d.set_texture(await getPngData(surface_image_file));
           return;
         }
         let voxel_image_count = new Int32Array(top_images_data.shape[0]);
@@ -367,7 +365,10 @@ function add_check_box(
             // find the image id
             for (let j = 0; j < top_images_data.shape[1]; j++) {
               // if found set the voxel data as the index of the image in the list
-              if (top_images_data.data[i * top_images_data.shape[1] + j] === image_id) {
+              if (
+                top_images_data.data[i * top_images_data.shape[1] + j] ===
+                image_id
+              ) {
                 found += 1;
                 break;
               }
@@ -375,9 +376,7 @@ function add_check_box(
           }
           if (found) {
             voxel_image_count[i] = found;
-          }
-          else
-            voxel_image_count[i] = -1;
+          } else voxel_image_count[i] = -1;
         }
         // convert voxel data to texture
         brain_3d.set_texture(
@@ -391,7 +390,8 @@ function add_check_box(
       if (url_obj.selected_images.length) image_map();
 
       async function update_images(e) {
-        if(!top_images_data) return console.error("top_images_data not loaded");
+        if (!top_images_data)
+          return console.error("top_images_data not loaded");
         // when a voxel has been clicked show the images
 
         function add_row(parent, component_id) {
@@ -404,7 +404,11 @@ function add_check_box(
           // add the images and add an onclick function
           for (let i = 0; i < 10; i++) {
             let im_id =
-            top_images_data.data[e.detail.voxel * top_images_data.shape[1] + i + component_id * 10];
+              top_images_data.data[
+                e.detail.voxel * top_images_data.shape[1] +
+                  i +
+                  component_id * 10
+              ];
             let img = add_image(row, `static_data/new_examples/${im_id}.jpg`);
             img.onclick = function () {
               if (!url_obj.selected_images.includes(im_id)) {
@@ -428,7 +432,8 @@ function add_check_box(
         element_examples.innerHTML = "";
 
         // add the rows
-        if (top_images_data.data[e.detail.voxel * top_images_data.shape[1]] < 0) return;
+        if (top_images_data.data[e.detail.voxel * top_images_data.shape[1]] < 0)
+          return;
         for (let i = 0; i < 5; i++) {
           add_row(element_examples, i);
         }
@@ -438,8 +443,6 @@ function add_check_box(
         selection_changed_event = e;
         update_images(e);
       });
-
-
     </script>
   </body>
 </html>
